# polyglot-grounded-qa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
artifacts/tables/: final_reader_takeaways.md  finetune_variant_leaderboard.md  meaningful_result_snapshot.md
configs/finetune/: cloud_unsloth_qlora.yaml  local_mlx_lora.yaml
configs/languages/: base.yaml  es-MX.yaml  es.yaml  fr.yaml  tr.yaml
configs/models/: default.yaml
configs/pipeline/: default.yaml
data/benchmarks/finetune/: MANIFEST.md  public_sft_dataset.jsonl  sft_dataset.jsonl  sft_dataset_merged.jsonl  test.jsonl  train.jsonl  (+1 more)
notebooks/: 00_project_story.ipynb  10_data_ingestion.ipynb  20_index_and_retrieval.ipynb  30_citation_generation.ipynb  40_verification_abstention.ipynb  50_eval_harness.ipynb  60_language_packs.ipynb  70_ablations.ipynb  80_final_results.ipynb  85_colab_adapter_training.ipynb
scripts/: analyze_hybrid_abstention.py  analyze_kg_coverage.py  analyze_kg_path_quality.py  analyze_sft_dataset.py  build_index.py  build_kg_cache.py  build_real_kg_cache.py  build_sft_dataset.py  check_final_artifacts_contract.py  format_sft_for_training.py  generate_figures.py  generate_tuned_predictions.py  ingest_public_qa.py  materialize_final_results.py  merge_sft_datasets.py  normalize_tuned_predictions.py  regenerate_predictions.py  run_ablation.py  run_eval.py  run_final_results_pipeline.py  run_finetune_data_pipeline.py  run_finetune_eval.py  run_notebook_batch.py  run_pipeline.py  run_trained_adapter_eval.py  split_sft_dataset.py  train_unsloth_sft.py
src/polyglot_grounded_qa/: __init__.py
tests/integration/: test_final_results_pipeline.py  test_scripts.py
tests/langpacks/: test_contracts.py
tests/notebook_smoke/: test_notebooks_present.py
tests/unit/: test_config_loader.py  test_generator_selection.py  test_hybrid_retrieval.py  test_kg_cache.py  test_pipeline.py  test_wikidata_adapter.py
(+44 files in other folders)
